--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       height: 100vh;
       overflow: hidden;
       display: flex;
-      align-items: center;
+      align-items: flex;
       justify-content: center;
       flex-direction: column;
+      padding-top: 5px; /* added to manually control spacing */
     }
 
     .container {
@@ -43,7 +44,7 @@
       font-family: 'Engagement', cursive;
       font-size: 4.5rem;
       font-weight: normal;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
 
     .brand-header .bold {
